@@ -57,9 +57,9 @@ Disassembly of section .text:
 .*:	d8912c07 	gsldxc1	\$f17,-128\(\$4,\$5\)
 .*:	f8d23bfe 	gsswxc1	\$f18,127\(\$6,\$7\)
 .*:	f9134c07 	gssdxc1	\$f19,-128\(\$8,\$9\)
-.*:	c98b3fea 	gslq	\$10,\$11,255\(\$12\)
-.*:	e9ee402d 	gssq	\$13,\$14,-256\(\$15\)
-.*:	ca15bff4 	gslqc1	\$f20,\$f21,255\(\$16\)
-.*:	ea37c036 	gssqc1	\$f22,\$f23,-256\(\$17\)
+.*:	c98b3fea 	gslq	\$10,\$11,4080\(\$12\)
+.*:	e9ee402d 	gssq	\$13,\$14,-4096\(\$15\)
+.*:	ca15bff4 	gslqc1	\$f20,\$f21,4080\(\$16\)
+.*:	ea37c036 	gssqc1	\$f22,\$f23,-4096\(\$17\)
 #pass
 
