@@ -58,8 +58,8 @@
 	gsswxc1		$f18,127($6,$7)
 	gssdxc1		$f19,-128($8,$9)
 
-	gslq		$10,$11,255($12) 
-	gssq		$13,$14,-256($15)
-	gslqc1		$f20,$f21,255($16)
-	gssqc1		$f22,$f23,-256($17)
+	gslq		$10,$11,4080($12)
+	gssq		$13,$14,-4096($15)
+	gslqc1		$f20,$f21,4080($16)
+	gssqc1		$f22,$f23,-4096($17)
 
